# triggers-mysql

./: .gitignore  .gitingore  README.md  config.py  main.py  model_clases.py  pyproject.toml  repository.py
sql/: queries.py  queries.sql
src/triggers_mysql/: UI.py  __init__.py  config.py  repository.py
src/triggers_mysql/sql/: __init__.py  triggers.sql
